--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,10 @@
   "name": "My App",
   "short_name": "My App",
   "description": "My App description",
+  "start_url": "./?homescreen=1",
+  "display": "standalone",
+  "theme_color": "#3f51b5",
+  "background_color": "#3f51b5",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
@@ -13,9 +17,5 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "theme_color": "#3f51b5",
-  "background_color": "#3f51b5"
+  ]
 }
