--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,12 @@
     "iron-selector": "PolymerElements/iron-selector#^1.5.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.0",
     "polymer": "Polymer/polymer#^1.9.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
+    "paper-button": "PolymerElements/paper-button#^2.1.1",
+    "paper-material": "PolymerElements/paper-material#^2.1.0",
+    "paper-card": "PolymerElements/paper-card#^2.1.0",
+    "iron-icon": "PolymerElements/iron-icon#^2.1.0",
+    "paper-dialog": "PolymerElements/paper-dialog#^2.1.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
