--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
     "hosting": {
-        "public": "build/bundled/",
+        "public": "build/es6-bundled/",
         "rewrites": [{
             "source": "**/!(*.*)",
             "destination": "/index.html"
